# Django-Poll-App

./: Dockerfile  README.md  pyproject.toml  requirements.txt
accounts/templates/accounts/: login.html
pollme/: settings.py  urls.py
polls/: admin.py  forms.py  urls.py  views.py
polls/templates/polls/: poll_edit.html  polls_list.html
polls/tests/: test_urls.py  test_views.py
static/css/: home_style.css
templates/: base.html
