[tool.poetry]
name = "django-poll-app"
version = "0.1.0"
description = ""
authors = ["Aron <aronesadegh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.6"
faker = "^25.4.0"
social-auth-app-django = "^5.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
